--- a/app.json
+++ b/app.json
@@ -1,10 +1,11 @@
 {
     "pages":[
-        "pages/demo/canvas",
         "pages/index/index",
         "pages/html5/nan",
         "pages/html5/love",
         "pages/music/index",
+        "pages/music/player",                
+        "pages/demo/canvas",
         "pages/demo/video",
         "pages/demo/scroll-view",
         "pages/demo/touches"
@@ -39,6 +40,7 @@
             }
         ]
     },
+    "requiredBackgroundModes": true,
     "networkTimeout": {
         "request": 10000,
         "downloadFile": 10000
