--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
     "pages": [
-        "pages/wallpaper/index",
-
+        "pages/demo/touches",
+        
         "pages/music/index",
         "pages/music/player",
         
@@ -10,31 +10,19 @@
         "pages/html5/love",
         "pages/demo/canvas",
         "pages/demo/video",
-        "pages/demo/scroll-view",
-        "pages/demo/touches"
+        "pages/demo/scroll-view"
     ],
     "window": {
         "backgroundColor": "#f5f5f5",
         "backgroundTextStyle": "dark",
         "navigationBarBackgroundColor": "#396",
-        "navigationBarTitleText": "YCNN",
-        "navigationBarTextStyle": "light"
+        "navigationBarTitleText": "demo",
+        "navigationBarTextStyle": "light",
+        "backgroundColorTop": "#f5f5f5",
+        "backgroundColorBottom": "#f5f5f5",
+        "onReachBottomDistance": 100
     },
-    "tabBar": {
-        "borderStyle": "black",
-        "selectedColor": "#339966",
-        "backgroundColor": "#fff",
-        "list": [
-            {
-                "pagePath": "pages/wallpaper/index",
-                "text": "壁纸"
-            },
-            {
-                "pagePath": "pages/music/index",
-                "text": "音乐"
-            }
-        ]
-    },
+    "cloud": true,
     "requiredBackgroundModes": [ "audio" ],
     "networkTimeout": {
         "request": 15000,
