--- a/app.json
+++ b/app.json
@@ -1,16 +1,17 @@
 {
     "pages": [
-        "pages/demo/touches",
-        
+        "pages/days/index",
+
         "pages/music/index",
         "pages/music/player",
+        "pages/demo/touches",
+        "pages/demo/scroll-view",
+        "pages/demo/canvas",
+        "pages/demo/video",
         
         "pages/index/index",
         "pages/html5/nan",
-        "pages/html5/love",
-        "pages/demo/canvas",
-        "pages/demo/video",
-        "pages/demo/scroll-view"
+        "pages/html5/love"
     ],
     "window": {
         "backgroundColor": "#f5f5f5",
@@ -20,7 +21,7 @@
         "navigationBarTextStyle": "light",
         "backgroundColorTop": "#f5f5f5",
         "backgroundColorBottom": "#f5f5f5",
-        "onReachBottomDistance": 100
+        "onReachBottomDistance": 300
     },
     "cloud": true,
     "requiredBackgroundModes": [ "audio" ],
